// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user-account-settings screenshot test user accounts 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }
.user-account-menu__selected-account {
        display: flex;
        cursor: pointer;
        align-items: center;
        min-width: 32px;
        max-width: 240px;

        --login-color: var(--clr-el-gray-080);
        --login-first-letter-color: var(--clr-el-red-100);
        --representative-login-color: var(--clr-el-red-100);
    }

        .user-account-menu__selected-account:hover {
            --login-color: var(--clr-el-gray-060);
            --login-first-letter-color: var(--clr-el-red-060);
            --representative-login-color: var(--clr-el-red-060);
        }
    .user-account-menu__skeleton {
        display: flex;
        align-items: center;
    }
    .user-account-menu__skeleton > :first-child {
            margin-right: 10px;
        }
    .user-account-menu__popup {
        background-color: transparent;
        border-radius: unset;
        box-shadow: unset;
        pointer-events: none;
    }
    .user-account-menu__account-text-container {
        margin-left: 6px;
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }
    @media (max-width: 1199px) {
        .user-account-menu__account-text-container {
            display: none;
        }
    }
    .user-account-menu__account-image {
        height: 100%;
        width: 100%;
    }
    .user-account-menu__user-menu-popup-content {
        display: flex;
    }
    .user-account-menu__account-settings {
        pointer-events: initial;
        align-self: start;
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        padding: var(--space-12) 0;
        box-sizing: border-box;
        width: 280px;
    }
    .user-account-menu__account-settings:nth-child(2) {
            margin-left: var(--space-8);
        }
    .user-account-menu__accounts-title {
        padding: var(--space-4) var(--space-24);
        margin: 0 0 var(--space-12) 0;
        font-weight: 500;
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-list {
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__accounts-list,
    .user-account-menu__menu-container {
        padding: 0 var(--space-12);
    }
    .user-account-menu__user-account {
        flex: 1;
        overflow: hidden;
    }
    .user-account-menu__accounts-list-item {
        display: flex;
        align-items: center;
        cursor: pointer;
        padding: var(--space-12);
        border-radius: 8px;
        --user-account-settings-check-icon-color: var(--clr-el-gray-080);
    }
    .user-account-menu__accounts-list-item_active.user-account-menu__accounts-list-item_selected-view_accent {
            background-color: var(--clr-el-red-010);
        }
    .user-account-menu__accounts-list-item_active {
            background-color: var(--clr-el-gray-030);
        }
    .user-account-menu__accounts-list-item_selected-view_accent {
            --user-account-settings-check-icon-color: var(--clr-el-red-100);
        }
    .user-account-menu__accounts-list-item_with-display-name {
            align-items: normal;
        }
    .user-account-menu__accounts-description {
        display: inline-block;
        margin-top: var(--space-12);
        padding: var(--space-4) var(--space-24);
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-footer-button {
        display: flex;
        justify-content: center;
        cursor: pointer;
        padding: var(--space-8) 0;
        margin-top: var(--space-12);
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-red-100);
    }
    .user-account-menu__accounts-footer-button :hover {
            color: var(--clr-el-gray-080);
        }
    .user-account-menu__accounts-list-item_with-display-name .user-account-menu__check-icon-container {
        margin-top: var(--space-4);
    }
    .user-account-menu__check-icon-container {
        width: 16px;
        height: 16px;
        color: var(--user-account-settings-check-icon-color);
        margin-left: var(--space-12);
    }
    .user-account-menu__user-menu-delimiter {
        height: 1px;
        background-color: var(--clr-el-gray-030);
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu {
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu-item {
        padding: var(--space-8) var(--space-12);
        border-radius: 8px;
        cursor: pointer;
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__user-menu-item:hover {
            background-color: var(--clr-bg-gray-3);
        }
    .user-account-menu__user-menu-item-title {
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-gray-080);
    }
    .user-account-menu__user-menu-item-description {
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
.user-account {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    cursor: pointer;
    overflow: hidden;
}

    .user-account_size_s32 {
            --avatar-width: 32px;
            --avatar-height: 32px;

            --account-info-margin-left: var(--space-6);

            --login-font-size: var(--font-size-14);
            --login-line-height: var(--line-height-20);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-18);
        }

    .user-account_size_s32.user-account_has-representative {
                --login-font-size: var(--font-size-12);
                --login-line-height: var(--line-height-14);
            }

    .user-account_size_s48 {
            --avatar-width: 48px;
            --avatar-height: 48px;

            --account-info-margin-left: var(--space-12);

            --login-font-size: var(--font-size-16);
            --login-line-height: var(--line-height-24);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-20);
        }

    .user-account_view_default {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-gray-080);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_pale {
            --avatar-opacity: 0.4;

            --login-first-letter-color: var(--clr-el-gray-060);
            --login-color: var(--clr-el-gray-060);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_accent {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);

            --name-color: var(--clr-el-red-060);
        }

    .user-account__avatars {
        display: flex;
        align-items: center;
        max-width: 100%;
    }

    .user-account_has-representative .user-account__avatar-container:not(.user-account__avatar-container_type_representative) {
        --avatar-opacity: 0.4;
    }

    .user-account__avatar-container {
        display: flex;
        flex-shrink: 0;
        overflow: hidden;
        border-radius: 50%;
        background: var(--clr-bg-gray-3);
        position: relative;
        width: var(--avatar-width);
        height: var(--avatar-height);
        opacity: var(--avatar-opacity);
    }

    .user-account__avatar-container_type_representative {
            border: 2px solid var(--clr-bg-gray-3);
            margin-left: calc(var(--space-16) * -1);
            z-index: 1;
            --avatar-opacity: 1;
        }

    .user-account__avatar {
        border-radius: 50%;
    }

    .user-account__account-info {
        margin-left: var(--account-info-margin-left);
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative) {
        color: var(--clr-el-gray-060);
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative)::first-letter {
            color: var(--clr-el-gray-060);
        }

    .user-account__login {
        font-weight: 500;
        color: var(--login-color);
        font-size: var(--login-font-size);
        line-height: var(--login-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account__login::first-letter {
            color: var(--login-first-letter-color);
        }

    .user-account__login_type_representative {
            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);
            font-size: var(--font-size-14);
            line-height: var(--line-height-18);
        }

    .user-account__name {
        color: var(--name-color);
        font-size: var(--name-font-size);
        line-height: var(--name-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account_hoverable:hover .user-account__login,
    .user-account_hoverable:hover .user-account__name {
        opacity: .6;
    }
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.skeleton {
    background-color: var(--clr-el-gray-030);
}

.skeleton_fade-in {
    animation: fade-in 1s 1;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    30% {
        opacity: 0.1;
    }

    50% {
        opacity: 0.4;
    }

    100% {
        opacity: 1;
    }
}
.link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    border-radius: 2px;
    outline: none;
}
    .link:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .link_view_base {
            color: var(--clr-el-blue-100);
        }
    .link_view_shade {
            color: var(--clr-el-gray-060);
        }
    .link_view_tertiary {
            color: var(--clr-str-black-800);
        }
    .link_view_tertiary:hover {
                 color: var(--clr-el-red-100);
            }
    .link_view_tertiary:active {
                color: var(--clr-el-gray-050);
            }
    .link_view_base,
        .link_view_shade {
            display: initial;
            font-weight: 400;
            text-decoration: none;
        }
    .link_view_base:hover,
            .link_view_base:active,
            .link_view_shade:hover,
            .link_view_shade:active {
                color: var(--clr-el-gray-080);
            }
    .link_size_s14 {
            font-size: 14px;
            line-height: 20px;
        }
    .link_size_s20 {
            font-size: 20px;
            line-height: 32px;
        }

<div tabindex=\\"0\\" class=\\"dropdown__anchor\\"><div class=\\"user-account user-account_view_default user-account_size_s32 user-account_hoverable\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"32\\" height=\\"32\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span></div></div></div><div class=\\"popup user-account-menu__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown\\"><div data-testid=\\"user-menu-popup-content\\" class=\\"user-account-menu__user-menu-popup-content\\"><div class=\\"user-account-menu__account-settings\\"><p class=\\"user-account-menu__accounts-title\\">Ваши аккаунты</p><div class=\\"user-account-menu__accounts-list\\"><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"1\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_selected-view_default user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__name\\">Великий МяоМяоМяоМяоМяоМяоМяоМяо</span></div></div><div class=\\"user-account-menu__check-icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div></form><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"2\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"seriousbird\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/i?id=49bc5ea56e4920b47934ff306d8fe17d_l-5233110-images-thumbs&amp;n=27&amp;h=384&amp;w=480\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">seriousbird</span><span class=\\"user-account__name\\">Чайка</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form></div><div class=\\"user-account-menu__menu-container\\"><div class=\\"user-account-menu__user-menu-delimiter\\"></div><div class=\\"user-account-menu__user-menu\\"><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru\\"><span class=\\"user-account-menu__user-menu-item-title\\">Управление аккаунтом</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/auth?mode=add-user&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Добавить пользователя</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/passport?mode=embeddedauth&amp;action=logout&amp;uid=1&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Выйти</span></a></div></div></div></div></div></div></div>"
`;

exports[`user-account-settings screenshot with representative accounts 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }
.user-account-menu__selected-account {
        display: flex;
        cursor: pointer;
        align-items: center;
        min-width: 32px;
        max-width: 240px;

        --login-color: var(--clr-el-gray-080);
        --login-first-letter-color: var(--clr-el-red-100);
        --representative-login-color: var(--clr-el-red-100);
    }

        .user-account-menu__selected-account:hover {
            --login-color: var(--clr-el-gray-060);
            --login-first-letter-color: var(--clr-el-red-060);
            --representative-login-color: var(--clr-el-red-060);
        }
    .user-account-menu__skeleton {
        display: flex;
        align-items: center;
    }
    .user-account-menu__skeleton > :first-child {
            margin-right: 10px;
        }
    .user-account-menu__popup {
        background-color: transparent;
        border-radius: unset;
        box-shadow: unset;
        pointer-events: none;
    }
    .user-account-menu__account-text-container {
        margin-left: 6px;
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }
    @media (max-width: 1199px) {
        .user-account-menu__account-text-container {
            display: none;
        }
    }
    .user-account-menu__account-image {
        height: 100%;
        width: 100%;
    }
    .user-account-menu__user-menu-popup-content {
        display: flex;
    }
    .user-account-menu__account-settings {
        pointer-events: initial;
        align-self: start;
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        padding: var(--space-12) 0;
        box-sizing: border-box;
        width: 280px;
    }
    .user-account-menu__account-settings:nth-child(2) {
            margin-left: var(--space-8);
        }
    .user-account-menu__accounts-title {
        padding: var(--space-4) var(--space-24);
        margin: 0 0 var(--space-12) 0;
        font-weight: 500;
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-list {
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__accounts-list,
    .user-account-menu__menu-container {
        padding: 0 var(--space-12);
    }
    .user-account-menu__user-account {
        flex: 1;
        overflow: hidden;
    }
    .user-account-menu__accounts-list-item {
        display: flex;
        align-items: center;
        cursor: pointer;
        padding: var(--space-12);
        border-radius: 8px;
        --user-account-settings-check-icon-color: var(--clr-el-gray-080);
    }
    .user-account-menu__accounts-list-item_active.user-account-menu__accounts-list-item_selected-view_accent {
            background-color: var(--clr-el-red-010);
        }
    .user-account-menu__accounts-list-item_active {
            background-color: var(--clr-el-gray-030);
        }
    .user-account-menu__accounts-list-item_selected-view_accent {
            --user-account-settings-check-icon-color: var(--clr-el-red-100);
        }
    .user-account-menu__accounts-list-item_with-display-name {
            align-items: normal;
        }
    .user-account-menu__accounts-description {
        display: inline-block;
        margin-top: var(--space-12);
        padding: var(--space-4) var(--space-24);
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-footer-button {
        display: flex;
        justify-content: center;
        cursor: pointer;
        padding: var(--space-8) 0;
        margin-top: var(--space-12);
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-red-100);
    }
    .user-account-menu__accounts-footer-button :hover {
            color: var(--clr-el-gray-080);
        }
    .user-account-menu__accounts-list-item_with-display-name .user-account-menu__check-icon-container {
        margin-top: var(--space-4);
    }
    .user-account-menu__check-icon-container {
        width: 16px;
        height: 16px;
        color: var(--user-account-settings-check-icon-color);
        margin-left: var(--space-12);
    }
    .user-account-menu__user-menu-delimiter {
        height: 1px;
        background-color: var(--clr-el-gray-030);
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu {
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu-item {
        padding: var(--space-8) var(--space-12);
        border-radius: 8px;
        cursor: pointer;
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__user-menu-item:hover {
            background-color: var(--clr-bg-gray-3);
        }
    .user-account-menu__user-menu-item-title {
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-gray-080);
    }
    .user-account-menu__user-menu-item-description {
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
.user-account {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    cursor: pointer;
    overflow: hidden;
}

    .user-account_size_s32 {
            --avatar-width: 32px;
            --avatar-height: 32px;

            --account-info-margin-left: var(--space-6);

            --login-font-size: var(--font-size-14);
            --login-line-height: var(--line-height-20);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-18);
        }

    .user-account_size_s32.user-account_has-representative {
                --login-font-size: var(--font-size-12);
                --login-line-height: var(--line-height-14);
            }

    .user-account_size_s48 {
            --avatar-width: 48px;
            --avatar-height: 48px;

            --account-info-margin-left: var(--space-12);

            --login-font-size: var(--font-size-16);
            --login-line-height: var(--line-height-24);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-20);
        }

    .user-account_view_default {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-gray-080);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_pale {
            --avatar-opacity: 0.4;

            --login-first-letter-color: var(--clr-el-gray-060);
            --login-color: var(--clr-el-gray-060);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_accent {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);

            --name-color: var(--clr-el-red-060);
        }

    .user-account__avatars {
        display: flex;
        align-items: center;
        max-width: 100%;
    }

    .user-account_has-representative .user-account__avatar-container:not(.user-account__avatar-container_type_representative) {
        --avatar-opacity: 0.4;
    }

    .user-account__avatar-container {
        display: flex;
        flex-shrink: 0;
        overflow: hidden;
        border-radius: 50%;
        background: var(--clr-bg-gray-3);
        position: relative;
        width: var(--avatar-width);
        height: var(--avatar-height);
        opacity: var(--avatar-opacity);
    }

    .user-account__avatar-container_type_representative {
            border: 2px solid var(--clr-bg-gray-3);
            margin-left: calc(var(--space-16) * -1);
            z-index: 1;
            --avatar-opacity: 1;
        }

    .user-account__avatar {
        border-radius: 50%;
    }

    .user-account__account-info {
        margin-left: var(--account-info-margin-left);
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative) {
        color: var(--clr-el-gray-060);
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative)::first-letter {
            color: var(--clr-el-gray-060);
        }

    .user-account__login {
        font-weight: 500;
        color: var(--login-color);
        font-size: var(--login-font-size);
        line-height: var(--login-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account__login::first-letter {
            color: var(--login-first-letter-color);
        }

    .user-account__login_type_representative {
            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);
            font-size: var(--font-size-14);
            line-height: var(--line-height-18);
        }

    .user-account__name {
        color: var(--name-color);
        font-size: var(--name-font-size);
        line-height: var(--name-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account_hoverable:hover .user-account__login,
    .user-account_hoverable:hover .user-account__name {
        opacity: .6;
    }
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.skeleton {
    background-color: var(--clr-el-gray-030);
}

.skeleton_fade-in {
    animation: fade-in 1s 1;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    30% {
        opacity: 0.1;
    }

    50% {
        opacity: 0.4;
    }

    100% {
        opacity: 1;
    }
}
.link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    border-radius: 2px;
    outline: none;
}
    .link:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .link_view_base {
            color: var(--clr-el-blue-100);
        }
    .link_view_shade {
            color: var(--clr-el-gray-060);
        }
    .link_view_tertiary {
            color: var(--clr-str-black-800);
        }
    .link_view_tertiary:hover {
                 color: var(--clr-el-red-100);
            }
    .link_view_tertiary:active {
                color: var(--clr-el-gray-050);
            }
    .link_view_base,
        .link_view_shade {
            display: initial;
            font-weight: 400;
            text-decoration: none;
        }
    .link_view_base:hover,
            .link_view_base:active,
            .link_view_shade:hover,
            .link_view_shade:active {
                color: var(--clr-el-gray-080);
            }
    .link_size_s14 {
            font-size: 14px;
            line-height: 20px;
        }
    .link_size_s20 {
            font-size: 20px;
            line-height: 32px;
        }

<div tabindex=\\"0\\" class=\\"dropdown__anchor\\"><div class=\\"user-account user-account_view_default user-account_size_s32 user-account_hoverable\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"32\\" height=\\"32\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span></div></div></div><div class=\\"popup user-account-menu__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown\\"><div data-testid=\\"user-menu-popup-content\\" class=\\"user-account-menu__user-menu-popup-content\\"><div class=\\"user-account-menu__account-settings\\"><p class=\\"user-account-menu__accounts-title\\">Доверенные вам аккаунты</p><div class=\\"user-account-menu__accounts-list\\"><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"1\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__name\\">Великий МяоМяоМяоМяоМяоМяоМяоМяо</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"2\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"seriousbird\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/i?id=49bc5ea56e4920b47934ff306d8fe17d_l-5233110-images-thumbs&amp;n=27&amp;h=384&amp;w=480\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">seriousbird</span><span class=\\"user-account__name\\">Чайка</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form></div><span class=\\"user-account-menu__accounts-description\\">Доверенный аккаунт позволяет пользоваться счетчиком от его имени. Наследуются все права доступа к счетчику, кроме глобальных.</span></div><div class=\\"user-account-menu__account-settings\\"><p class=\\"user-account-menu__accounts-title\\">Ваши аккаунты</p><div class=\\"user-account-menu__accounts-list\\"><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"1\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_selected-view_default user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__name\\">Великий МяоМяоМяоМяоМяоМяоМяоМяо</span></div></div><div class=\\"user-account-menu__check-icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div></form><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"2\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"seriousbird\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/i?id=49bc5ea56e4920b47934ff306d8fe17d_l-5233110-images-thumbs&amp;n=27&amp;h=384&amp;w=480\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">seriousbird</span><span class=\\"user-account__name\\">Чайка</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form></div><div class=\\"user-account-menu__menu-container\\"><div class=\\"user-account-menu__user-menu-delimiter\\"></div><div class=\\"user-account-menu__user-menu\\"><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru\\"><span class=\\"user-account-menu__user-menu-item-title\\">Управление аккаунтом</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/auth?mode=add-user&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Добавить пользователя</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/passport?mode=embeddedauth&amp;action=logout&amp;uid=1&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Выйти</span></a></div></div></div></div></div></div></div>"
`;

exports[`user-account-settings screenshot with selected representative account 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }
.user-account-menu__selected-account {
        display: flex;
        cursor: pointer;
        align-items: center;
        min-width: 32px;
        max-width: 240px;

        --login-color: var(--clr-el-gray-080);
        --login-first-letter-color: var(--clr-el-red-100);
        --representative-login-color: var(--clr-el-red-100);
    }

        .user-account-menu__selected-account:hover {
            --login-color: var(--clr-el-gray-060);
            --login-first-letter-color: var(--clr-el-red-060);
            --representative-login-color: var(--clr-el-red-060);
        }
    .user-account-menu__skeleton {
        display: flex;
        align-items: center;
    }
    .user-account-menu__skeleton > :first-child {
            margin-right: 10px;
        }
    .user-account-menu__popup {
        background-color: transparent;
        border-radius: unset;
        box-shadow: unset;
        pointer-events: none;
    }
    .user-account-menu__account-text-container {
        margin-left: 6px;
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }
    @media (max-width: 1199px) {
        .user-account-menu__account-text-container {
            display: none;
        }
    }
    .user-account-menu__account-image {
        height: 100%;
        width: 100%;
    }
    .user-account-menu__user-menu-popup-content {
        display: flex;
    }
    .user-account-menu__account-settings {
        pointer-events: initial;
        align-self: start;
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        padding: var(--space-12) 0;
        box-sizing: border-box;
        width: 280px;
    }
    .user-account-menu__account-settings:nth-child(2) {
            margin-left: var(--space-8);
        }
    .user-account-menu__accounts-title {
        padding: var(--space-4) var(--space-24);
        margin: 0 0 var(--space-12) 0;
        font-weight: 500;
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-list {
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__accounts-list,
    .user-account-menu__menu-container {
        padding: 0 var(--space-12);
    }
    .user-account-menu__user-account {
        flex: 1;
        overflow: hidden;
    }
    .user-account-menu__accounts-list-item {
        display: flex;
        align-items: center;
        cursor: pointer;
        padding: var(--space-12);
        border-radius: 8px;
        --user-account-settings-check-icon-color: var(--clr-el-gray-080);
    }
    .user-account-menu__accounts-list-item_active.user-account-menu__accounts-list-item_selected-view_accent {
            background-color: var(--clr-el-red-010);
        }
    .user-account-menu__accounts-list-item_active {
            background-color: var(--clr-el-gray-030);
        }
    .user-account-menu__accounts-list-item_selected-view_accent {
            --user-account-settings-check-icon-color: var(--clr-el-red-100);
        }
    .user-account-menu__accounts-list-item_with-display-name {
            align-items: normal;
        }
    .user-account-menu__accounts-description {
        display: inline-block;
        margin-top: var(--space-12);
        padding: var(--space-4) var(--space-24);
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
    .user-account-menu__accounts-footer-button {
        display: flex;
        justify-content: center;
        cursor: pointer;
        padding: var(--space-8) 0;
        margin-top: var(--space-12);
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-red-100);
    }
    .user-account-menu__accounts-footer-button :hover {
            color: var(--clr-el-gray-080);
        }
    .user-account-menu__accounts-list-item_with-display-name .user-account-menu__check-icon-container {
        margin-top: var(--space-4);
    }
    .user-account-menu__check-icon-container {
        width: 16px;
        height: 16px;
        color: var(--user-account-settings-check-icon-color);
        margin-left: var(--space-12);
    }
    .user-account-menu__user-menu-delimiter {
        height: 1px;
        background-color: var(--clr-el-gray-030);
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu {
        margin-top: var(--space-12);
    }
    .user-account-menu__user-menu-item {
        padding: var(--space-8) var(--space-12);
        border-radius: 8px;
        cursor: pointer;
        display: flex;
        flex-direction: column;
    }
    .user-account-menu__user-menu-item:hover {
            background-color: var(--clr-bg-gray-3);
        }
    .user-account-menu__user-menu-item-title {
        font-size: 14px;
        line-height: 20px;
        font-weight: 500;
        color: var(--clr-el-gray-080);
    }
    .user-account-menu__user-menu-item-description {
        font-size: 14px;
        line-height: 20px;
        color: var(--clr-el-gray-060);
    }
.user-account {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    cursor: pointer;
    overflow: hidden;
}

    .user-account_size_s32 {
            --avatar-width: 32px;
            --avatar-height: 32px;

            --account-info-margin-left: var(--space-6);

            --login-font-size: var(--font-size-14);
            --login-line-height: var(--line-height-20);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-18);
        }

    .user-account_size_s32.user-account_has-representative {
                --login-font-size: var(--font-size-12);
                --login-line-height: var(--line-height-14);
            }

    .user-account_size_s48 {
            --avatar-width: 48px;
            --avatar-height: 48px;

            --account-info-margin-left: var(--space-12);

            --login-font-size: var(--font-size-16);
            --login-line-height: var(--line-height-24);

            --name-font-size: var(--font-size-14);
            --name-line-height: var(--line-height-20);
        }

    .user-account_view_default {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-gray-080);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_pale {
            --avatar-opacity: 0.4;

            --login-first-letter-color: var(--clr-el-gray-060);
            --login-color: var(--clr-el-gray-060);

            --name-color: var(--clr-el-gray-060);
        }

    .user-account_view_accent {
            --avatar-opacity: 1;

            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);

            --name-color: var(--clr-el-red-060);
        }

    .user-account__avatars {
        display: flex;
        align-items: center;
        max-width: 100%;
    }

    .user-account_has-representative .user-account__avatar-container:not(.user-account__avatar-container_type_representative) {
        --avatar-opacity: 0.4;
    }

    .user-account__avatar-container {
        display: flex;
        flex-shrink: 0;
        overflow: hidden;
        border-radius: 50%;
        background: var(--clr-bg-gray-3);
        position: relative;
        width: var(--avatar-width);
        height: var(--avatar-height);
        opacity: var(--avatar-opacity);
    }

    .user-account__avatar-container_type_representative {
            border: 2px solid var(--clr-bg-gray-3);
            margin-left: calc(var(--space-16) * -1);
            z-index: 1;
            --avatar-opacity: 1;
        }

    .user-account__avatar {
        border-radius: 50%;
    }

    .user-account__account-info {
        margin-left: var(--account-info-margin-left);
        overflow: hidden;
        display: flex;
        flex-direction: column;
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative) {
        color: var(--clr-el-gray-060);
    }

    .user-account_has-representative .user-account__login:not(.user-account__login_type_representative)::first-letter {
            color: var(--clr-el-gray-060);
        }

    .user-account__login {
        font-weight: 500;
        color: var(--login-color);
        font-size: var(--login-font-size);
        line-height: var(--login-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account__login::first-letter {
            color: var(--login-first-letter-color);
        }

    .user-account__login_type_representative {
            --login-first-letter-color: var(--clr-el-red-100);
            --login-color: var(--clr-el-red-100);
            font-size: var(--font-size-14);
            line-height: var(--line-height-18);
        }

    .user-account__name {
        color: var(--name-color);
        font-size: var(--name-font-size);
        line-height: var(--name-line-height);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .user-account_hoverable:hover .user-account__login,
    .user-account_hoverable:hover .user-account__name {
        opacity: .6;
    }
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.skeleton {
    background-color: var(--clr-el-gray-030);
}

.skeleton_fade-in {
    animation: fade-in 1s 1;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    30% {
        opacity: 0.1;
    }

    50% {
        opacity: 0.4;
    }

    100% {
        opacity: 1;
    }
}
.link {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    border-radius: 2px;
    outline: none;
}
    .link:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .link_view_base {
            color: var(--clr-el-blue-100);
        }
    .link_view_shade {
            color: var(--clr-el-gray-060);
        }
    .link_view_tertiary {
            color: var(--clr-str-black-800);
        }
    .link_view_tertiary:hover {
                 color: var(--clr-el-red-100);
            }
    .link_view_tertiary:active {
                color: var(--clr-el-gray-050);
            }
    .link_view_base,
        .link_view_shade {
            display: initial;
            font-weight: 400;
            text-decoration: none;
        }
    .link_view_base:hover,
            .link_view_base:active,
            .link_view_shade:hover,
            .link_view_shade:active {
                color: var(--clr-el-gray-080);
            }
    .link_size_s14 {
            font-size: 14px;
            line-height: 20px;
        }
    .link_size_s20 {
            font-size: 20px;
            line-height: 32px;
        }

<div tabindex=\\"0\\" class=\\"dropdown__anchor\\"><div class=\\"user-account user-account_view_default user-account_size_s32 user-account_hoverable user-account_has-representative\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"32\\" height=\\"32\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div><div class=\\"user-account__avatar-container user-account__avatar-container_type_representative\\"><img alt=\\"myao.zedongо\\" width=\\"32\\" height=\\"32\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__login user-account__login_type_representative\\">myao.zedongо</span></div></div></div><div class=\\"popup user-account-menu__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown\\"><div data-testid=\\"user-menu-popup-content\\" class=\\"user-account-menu__user-menu-popup-content\\"><div class=\\"user-account-menu__account-settings\\"><p class=\\"user-account-menu__accounts-title\\">Доверенные вам аккаунты</p><div class=\\"user-account-menu__accounts-list\\"><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"1\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_selected-view_accent user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_accent user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__name\\">Великий МяоМяоМяоМяоМяоМяоМяоМяо</span></div></div><div class=\\"user-account-menu__check-icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div></form><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"2\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"seriousbird\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/i?id=49bc5ea56e4920b47934ff306d8fe17d_l-5233110-images-thumbs&amp;n=27&amp;h=384&amp;w=480\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">seriousbird</span><span class=\\"user-account__name\\">Чайка</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form></div><span class=\\"user-account-menu__accounts-description\\">Вы пользуетесь счетчиком от имени довереного аккаунта. Наследуются все права доступа к счетчику, кроме глобальных.</span><div class=\\"user-account-menu__user-menu-delimiter\\"></div><div data-testid=\\"user-accounts-footer-button\\" class=\\"user-account-menu__accounts-footer-button\\"><span>Вернуться к своему аккаунту</span></div></div><div class=\\"user-account-menu__account-settings\\"><p class=\\"user-account-menu__accounts-title\\">Ваши аккаунты</p><div class=\\"user-account-menu__accounts-list\\"><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"1\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_selected-view_default user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"myao.zedongо\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/get-yapic/0/0-0/islands-middle\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">myao.zedongо</span><span class=\\"user-account__name\\">Великий МяоМяоМяоМяоМяоМяоМяоМяо</span></div></div><div class=\\"user-account-menu__check-icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div></form><form action=\\"https://passport.yandex.ru/passport?mode=embeddedauth\\" method=\\"POST\\"><input type=\\"hidden\\" name=\\"action\\" value=\\"change_default\\"/><input type=\\"hidden\\" name=\\"uid\\" value=\\"2\\"/><input type=\\"hidden\\" name=\\"yu\\"/><input type=\\"hidden\\" name=\\"retpath\\" value=\\"http://localhost/\\"/><div class=\\"user-account-menu__accounts-list-item user-account-menu__accounts-list-item_with-display-name\\"><div class=\\"user-account user-account-menu__user-account user-account_view_default user-account_size_s48\\"><div class=\\"user-account__avatars\\"><div class=\\"user-account__avatar-container\\"><img alt=\\"seriousbird\\" width=\\"48\\" height=\\"48\\" class=\\"user-account__avatar\\" src=\\"https://avatars.mds.yandex.net/i?id=49bc5ea56e4920b47934ff306d8fe17d_l-5233110-images-thumbs&amp;n=27&amp;h=384&amp;w=480\\"/></div></div><div class=\\"user-account__account-info\\"><span class=\\"user-account__login\\">seriousbird</span><span class=\\"user-account__name\\">Чайка</span></div></div><div class=\\"user-account-menu__check-icon-container\\"></div></div></form></div><div class=\\"user-account-menu__menu-container\\"><div class=\\"user-account-menu__user-menu-delimiter\\"></div><div class=\\"user-account-menu__user-menu\\"><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru\\"><span class=\\"user-account-menu__user-menu-item-title\\">Управление аккаунтом</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/auth?mode=add-user&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Добавить пользователя</span></a></div><div><a class=\\"link user-account-menu__user-menu-item\\" href=\\"https://passport.yandex.ru/passport?mode=embeddedauth&amp;action=logout&amp;uid=1&amp;retpath=http%253A%252F%252Flocalhost%252F\\"><span class=\\"user-account-menu__user-menu-item-title\\">Выйти</span></a></div></div></div></div></div></div></div>"
`;
